[package]
name = "raptorboost"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rbs"
path = "src/server.rs"

# [[bin]]
# name = "rbc"
# path = "src/client.rs"

[dependencies]
tonic = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.36.0", features = ["bundled"] }
sha2 = "0.10.9"
clap = { version = "4.5.39", features = ["derive", "string"] }
tokio-stream = "0.1.17"
thiserror = "2.0.12"

[build-dependencies]
tonic-build = "*"
