[package]
name = "raptorboost"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rbs"
path = "src/server.rs"

[[bin]]
name = "rbc"
path = "src/client.rs"

[dependencies]
tonic = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
clap = { version = "4.5.39", features = ["derive", "string"] }
tokio-stream = "0.1.17"
thiserror = "2.0.12"
ring = "0.17.14"
hex = "0.4.3"
local-ip-address = "0.6.5"
indicatif = "0.17.11"

[build-dependencies]
tonic-build = "*"
